--- a/index.html
+++ b/index.html
@@ -8,51 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        /* Custom styles for the Inter font and overall body */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8; /* Light gray background */
-            color: #334155; /* Dark text color */
-        }
-        /* Styles for section titles */
-        .section-title {
-            border-bottom: 2px solid #cbd5e1; /* Light gray border */
-            padding-bottom: 0.5rem;
-            margin-bottom: 1.5rem;
-            color: #1e293b; /* Darker text for titles */
-        }
-        /* Card styling for topics/skills */
-        .card {
-            background-color: #ffffff; /* White card background */
-            border-radius: 0.75rem; /* Rounded corners */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-            padding: 1.5rem;
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-            display: flex; /* Use flexbox for icon and text alignment */
-            align-items: flex-start; /* Align items to the start */
-            gap: 1rem; /* Space between icon and text */
-        }
-        .card:hover {
-            transform: translateY(-5px); /* Lift effect on hover */
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15); /* Enhanced shadow on hover */
-        }
-        /* Icon styling within cards */
-        .card-icon {
-            font-size: 1.8rem; /* Larger icon size */
-            color: #4a90e2; /* Blue color for icons */
-            flex-shrink: 0; /* Prevent icon from shrinking */
-            margin-top: 0.25rem; /* Slight adjustment for vertical alignment */
-        }
-        /* Link styling */
-        a {
-            color: #3b82f6; /* Blue link color */
-            text-decoration: none; /* No underline by default */
-        }
-        a:hover {
-            text-decoration: underline; /* Underline on hover */
-        }
-    </style>
+    <!-- Link to your custom stylesheet -->
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body class="min-h-screen flex flex-col items-center py-8 px-4 sm:px-6 lg:px-8">
 
