--- a/rearranging-equations/qs.html
+++ b/rearranging-equations/qs.html
@@ -12,7 +12,7 @@
     <!-- MathJax configuration (MUST be loaded BEFORE the MathJax library itself) -->
     <script type="text/javascript" src="../assets/mathjax_config.js"></script>
     <!-- MathJax library -->
-    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 </head>
 <body class="min-h-screen flex flex-col items-center py-8 px-4 sm:px-6 lg:px-8">
 
