--- a/marshallian-demand/qs.html
+++ b/marshallian-demand/qs.html
@@ -31,7 +31,8 @@
         <section class="mb-12">
             <!-- Question 1 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. Agent $A$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.4}y^{0.6}$. Suppose $A$'s income is $\pounds 300$, the price of good $x$ is $\pounds 10$, and the price of good $y$ is $\pounds 15$. Use the Lagrangian method to find $A$'s Marshallian demand for $x$ and $y$ (i.e., calculate the specific quantities consumed).</h3>
+                <h3 class="text-xl font-semibold mb-2">1.</h3>
+                <p class="question-body-text">Agent $A$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.4}y^{0.6}$. Suppose $A$'s income is £300, the price of good $x$ is £10, and the price of good $y$ is £15. Use the Lagrangian method to find $A$'s Marshallian demand for $x$ and $y$ (i.e., calculate the specific quantities consumed).</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -76,7 +77,8 @@
 
             <!-- Question 2 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. Consumer $B$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.25}y^{0.75}$. Suppose $B$'s income is $\pounds 240$, the price of good $x$ is $\pounds 8$, and the price of good $y$ is $\pounds 4$. Use the Lagrangian method to find $B$'s Marshallian demand for $x$ and $y$ (i.e., calculate the specific quantities consumed).</h3>
+                <h3 class="text-xl font-semibold mb-2">2.</h3>
+                <p class="question-body-text">Consumer $B$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.25}y^{0.75}$. Suppose $B$'s income is £240, the price of good $x$ is £8, and the price of good $y$ is £4. Use the Lagrangian method to find $B$'s Marshallian demand for $x$ and $y$ (i.e., calculate the specific quantities consumed).</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -122,7 +124,8 @@
 
             <!-- Question 3 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. Agent $C$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.9}y^{0.1}$. Let $M$ denote $C$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $C$'s Marshallian demand function for $y$.</h3>
+                <h3 class="text-xl font-semibold mb-2">3.</h3>
+                <p class="question-body-text">Agent $C$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{0.9}y^{0.1}$. Let $M$ denote $C$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $C$'s Marshallian demand function for $y$.</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -167,7 +170,8 @@
 
             <!-- Question 4 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. Consumer $D$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{a}y^{b}$, where $a$ and $b$ are positive constants. Let $M$ denote $D$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $D$'s Marshallian demand function for $x$.</h3>
+                <h3 class="text-xl font-semibold mb-2">4.</h3>
+                <p class="question-body-text">Consumer $D$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x^{a}y^{b}$, where $a$ and $b$ are positive constants. Let $M$ denote $D$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $D$'s Marshallian demand function for $x$.</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -215,7 +219,8 @@
 
             <!-- Question 5 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. Agent $E$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x + \ln(y)$. Let $M$ denote $E$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $E$'s Marshallian demand functions for $x$ and $y$. Assume the consumer consumes positive amounts of both $x$ and $y$.</h3>
+                <h3 class="text-xl font-semibold mb-2">5.</h3>
+                <p class="question-body-text">Agent $E$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = x + \ln(y)$. Let $M$ denote $E$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $E$'s Marshallian demand functions for $x$ and $y$. Assume the consumer consumes positive amounts of both $x$ and $y$.</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -263,7 +268,8 @@
 
             <!-- Question 6 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. Consumer $F$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = xy + x$. Let $M$ denote $F$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $F$'s Marshallian demand functions for $x$ and $y$. Assume the consumer consumes positive amounts of both $x$ and $y$.</h3>
+                <h3 class="text-xl font-semibold mb-2">6.</h3>
+                <p class="question-body-text">Consumer $F$'s preferences over goods $x$ and $y$ can be represented by the utility function $U(x,y) = xy + x$. Let $M$ denote $F$'s income, and $p_x$ and $p_y$ denote the prices of the respective goods. Use the Lagrangian method to find $F$'s Marshallian demand functions for $x$ and $y$. Assume the consumer consumes positive amounts of both $x$ and $y$.</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
